[package]
name = "matrix_bot_api"
version = "0.3.1"
authors = ["zwieberl <donko@posteo.de>"]
description = """API for writing a bot for the Matrix messaging protocol"""
license = "MIT"
keywords = [ "matrix", "bot", "fractal" ]
repository = "https://github.com/zwieberl/matrix_bot_api"

[dependencies]
fractal-matrix-api = "4.0.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.6"

[dev-dependencies]
config = "*"
rand = "*"
